--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -5,17 +5,33 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <h2>About Me</h2>
-    <p>I am learning web development through ALX.</p>
-    <p>This is my first portfolio project, built with basic HTML.</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <h2>About Me</h2>
+            <p>I am learning web development through ALX.</p>
+            <p>This is my first portfolio project, built with basic HTML.</p>
 
-    <h3>My Goals</h3>
-    <p>I aim to become a full-stack developer in the next year.</p>
-    <p>This project is the first step in my learning journey.</p>
+            <h3>My Goals</h3>
+            <p>I aim to become a full-stack developer in the next year.</p>
+            <p>This project is the first step in my learning journey.</p>
 
-    <a href="https://www.alxafrica.com" target="_blank">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
-    </a>
+            <a href="https://www.alxafrica.com" target="_blank">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+            </a>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://your-link.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
