--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,20 +5,28 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <h1>My Tweets</h1>
-
-    <!-- Embedded Tweet -->
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Excited to build my first portfolio site with HTML! 💻🚀 #WebDev</p>
-        &mdash; YourName (@yourhandle) 
-        <a href="https://twitter.com/twitter/status/20">March 21, 2006</a>
-    </blockquote> 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-    <!-- Link back to homepage -->
-    <p><a href="index.html">← Back to Home</a></p>
-
-    <h1>Welcome to My Portfolio</h1>
-<p><a href="tweets.html">See my tweets →</a></p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Excited to build my first portfolio site with HTML! 💻🚀 #WebDev</p>
+                &mdash; YourName (@yourhandle)
+                <a href="https://twitter.com/twitter/status/20">March 21, 2006</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+    <footer>
+        <p>Made by YOUR NAME - <a href="https://your-link.com" target="_blank">here</a>.</p>
+    </footer>
 </body>
 </html>
